unpackaged/main/default/objects/Opportunity_SKU__c/fields/Zuora_Product_Rate_Plan_Charge_Id__c.field-meta.xml
<CustomField>
    <fullName>Zuora_Product_Rate_Plan_Charge_Id__c</fullName>
    <formula>SKU_Product__r.Billing_Plan__r.Zuora_Rate_Plan_Charge_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Zuora Product Rate Plan Charge Id</label>
    <type>Text</type>
</CustomField>