unpackaged/main/default/objects/Opportunity_SKU__c/fields/ZuoraId__c.field-meta.xml
<CustomField>
    <fullName>ZuoraId__c</fullName>
    <label>ZuoraId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>