unpackaged/main/default/objects/Opportunity_SKU__c/recordTypes/Soluno_Service.recordType-meta.xml
<RecordType>
    <fullName>Soluno_Service</fullName>
    <active>true</active>
    <description>Use to add a service (Non-Subscription) SKU the Opportunity</description>
    <label>Soluno - Service</label>
</RecordType>