unpackaged/main/default/objects/Opportunity_SKU__c/recordTypes/Soluno_Subscription.recordType-meta.xml
<RecordType>
    <fullName>Soluno_Subscription</fullName>
    <active>true</active>
    <description>Use to add a Subscription SKU the Opportunity</description>
    <label>Soluno - Subscription</label>
</RecordType>