unpackaged/main/default/objects/Opportunity_SKU__c/recordTypes/Standard_SKU.recordType-meta.xml
<RecordType>
    <fullName>Standard_SKU</fullName>
    <active>true</active>
    <label>Standard SKU</label>
</RecordType>