unpackaged/main/default/objects/Opportunity_SKU__c/validationRules/Soluno_1_Opp_SKU_allowed.validationRule-meta.xml
<ValidationRule>
    <fullName>Soluno_1_Opp_SKU_allowed</fullName>
    <active>true</active>
    <description>Produces error if more then 1 Opp SKU is created for Soluno Opportunity</description>
    <errorConditionFormula>and(
IsNew(),
Opportunity__r.RecordTypeId = &#39;0123g000000TWbn&#39;,
Opportunity__r.Opp_SKU_Added__c  &gt;= 1,
Ispickval(Product_Type__c,&#39;Subscription&#39;)

)</errorConditionFormula>
    <errorMessage>Only 1 SUBSCRIPTION Opportunity SKU is permitted for this Opportunity Type.</errorMessage>
</ValidationRule>