unpackaged/main/default/objects/Opportunity_SKU__c/validationRules/Soluno_Currency_Match.validationRule-meta.xml
<ValidationRule>
    <fullName>Soluno_Currency_Match</fullName>
    <active>true</active>
    <description>Checks to make sure the Currency is the same as the Opportunity</description>
    <errorConditionFormula>and(
Opportunity__r.RecordTypeId = &#39;0123g000000TWbn&#39;,
 Text(CurrencyIsoCode) &lt;&gt;  Text(Opportunity__r.CurrencyIsoCode) 

)</errorConditionFormula>
    <errorDisplayField>CurrencyIsoCode</errorDisplayField>
    <errorMessage>Currency must match currency used on Opportunity.</errorMessage>
</ValidationRule>