unpackaged/main/default/objects/Opportunity_SKU__c/listViews/All_Opportunity_SKU.listView-meta.xml
<ListView>
    <fullName>All_Opportunity_SKU</fullName>
    <columns>NAME</columns>
    <columns>Billing_Plan__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Product_Type__c</columns>
    <columns>Qty__c</columns>
    <columns>Price_Base__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Unit_Price__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Opportunity SKU</label>
</ListView>