unpackaged/main/default/objects/Opportunity_SKU__c/listViews/All_Soluno_Records.listView-meta.xml
<ListView>
    <fullName>All_Soluno_Records</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>All Soluno Records</label>
</ListView>